# PyLicencer-CLI

./: .gitignore  LICENCE  pyproject.toml  requirements.txt
data/: apache-2.0.txt  gpl-3.0.txt
src/pylicencer/: __main__.py  licences.py
