[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pylicencer-cli"
version = "0.1.1"
description = "A Simple Licence File Creater for Python Projects"
authors = [{name = "vfm-sb", email = "vfm-sb@proton.me"}]
requires-python = ">=3.11.8"
dependencies = [
  "pyvutils==0.1.4",
  "ihandler==0.1.3"
]
readme = "README.md"
license = {file = "LICENCE"}
keywords = ["pylicencer", "pylicencer-cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English"
]

[project.scripts]
pylicencer-cli = "pylicencer.__main__:main"

[project.urls]
Repository = "https://github.com/vfm-sb/PyLicencer-CLI"